fixed "register below" links on mechmania and openhatch pages so now they jump to the right spots

--- a/css/rp_styles.css
+++ b/css/rp_styles.css
@@ -168,6 +168,9 @@ a:hover {
 .hero-unit {
   padding: 20px;
 }
+#register > .hero-unit {
+  height: 350px;
+}
 .hero-unit p {
   font-weight: normal;
   font-size: 13px;
